--- a/res_MuSu/4_[NA, n, MFA_subs]/MSC_010208/MuSu_(NA, n, MFA_subs).Rmd
+++ b/res_MuSu/4_[NA, n, MFA_subs]/MSC_010208/MuSu_(NA, n, MFA_subs).Rmd
@@ -35,7 +35,7 @@ parcelfile2read <- c("/sub-MSC01_node_parcel_comm.txt",
                      "/sub-MSC08_node_parcel_comm.txt")
 subj.name <- c("sub01","sub02", "sub08")
 
-load(paste0("../../../data/grandatble_and_labels_MSC01_MSC08_20190312.Rdata")) # read the labels of grandtable
+load(paste0("../../../data/grandatble_and_labels_MSC01_MSC02_MSC08_20190410.Rdata")) # read the labels of grandtable
 # gt: grand tabls
 # labels: information for each edge in the rectangular grand table
 
@@ -95,45 +95,45 @@ As a result, the correlation matrix of each session of each subject will look li
 ```{r data, echo = FALSE, include = FALSE, fig.show='hide'}
 ### Make these not objects, but part of a list? ### MYC NEED TO CHANGE 20190404
 # read examplar data
-zmat.path <- "../../../data/zmat"
-subj.num <- substr(subj.name, start = 4, stop = 6) # only works with format like "sub06" or "MSC06"
-#--- plot heatmap
-hmaplist <- list()
-hmaplist_i <- 1
-for(subj.count in 1:length(parcel.list)){
-  load(paste0(zmat.path,"/sub-MSC",subj.num[subj.count],"_zcube_rcube.RData"))
-  hmaplist[[subj.count]] <- list()
-  for(session.count in 1:dim(cubes$rcube)[3]){
-    # heat map of correlation matrices
-    hmap.name <- sprintf("sub%s_hmap%s",subj.num[subj.count],session.count)
-    hmaplist[[subj.count]][session.count] <- superheat(cubes$rcube[,,session.count],
-                                membership.cols = parcel.list[[subj.count]]$vox.des$Comm.rcd,
-                                membership.rows = parcel.list[[subj.count]]$vox.des$Comm.rcd,
-                                clustering.method = NULL,
-                                heat.col.scheme = "viridis",
-                                left.label.size = 0.08,
-                                bottom.label.size = 0.05,
-                                y.axis.reverse = TRUE,
-                                left.label.col = labelcol[[subj.count]], # order by community name
-                                bottom.label.col = labelcol[[subj.count]],
-                                left.label.text.size = 3,
-                                bottom.label.text.size = 2,
-                                left.label.text.col = textcol[[subj.count]],
-                                bottom.label.text.col = textcol[[subj.count]],
-                                left.label.text.alignment = "left",
-                                title = sprintf("Correlation matrix of #%s session",session.count)
-                                )
-    # hmaplist_i <- hmaplist_i + 1
-  }
-}
+# zmat.path <- "../../../data/zmat"
+# subj.num <- substr(subj.name, start = 4, stop = 6) # only works with format like "sub06" or "MSC06"
+# #--- plot heatmap
+# hmaplist <- list()
+# hmaplist_i <- 1
+# for(subj.count in 1:length(parcel.list)){
+#   load(paste0(zmat.path,"/sub-MSC",subj.num[subj.count],"_zcube_rcube.RData"))
+#   hmaplist[[subj.count]] <- list()
+#   for(session.count in 1:dim(cubes$rcube)[3]){
+#     # heat map of correlation matrices
+#     hmap.name <- sprintf("sub%s_hmap%s",subj.num[subj.count],session.count)
+#     hmaplist[[subj.count]][session.count] <- superheat(cubes$rcube[,,session.count],
+#                                 membership.cols = parcel.list[[subj.count]]$vox.des$Comm.rcd,
+#                                 membership.rows = parcel.list[[subj.count]]$vox.des$Comm.rcd,
+#                                 clustering.method = NULL,
+#                                 heat.col.scheme = "viridis",
+#                                 left.label.size = 0.08,
+#                                 bottom.label.size = 0.05,
+#                                 y.axis.reverse = TRUE,
+#                                 left.label.col = labelcol[[subj.count]], # order by community name
+#                                 bottom.label.col = labelcol[[subj.count]],
+#                                 left.label.text.size = 3,
+#                                 bottom.label.text.size = 2,
+#                                 left.label.text.col = textcol[[subj.count]],
+#                                 bottom.label.text.col = textcol[[subj.count]],
+#                                 left.label.text.alignment = "left",
+#                                 title = sprintf("Correlation matrix of #%s session",session.count)
+#                                 )
+#     # hmaplist_i <- hmaplist_i + 1
+#   }
+# }
 
 ```
 
 ```{r plot_all_sub_session_hmap, echo=F, fig.height=(8*length(subj.name)), fig.width= 40}
-for(i in 1:length(hmaplist)){
-  print(sprintf("%s", subj.name[i]))
-  do.call(grid.arrange, c(hmaplist[[i]], ncol=5))
-}
+# for(i in 1:length(hmaplist)){
+#   print(sprintf("%s", subj.name[i]))
+#   do.call(grid.arrange, c(hmaplist[[i]], ncol=5))
+# }
 ```
 
 
@@ -322,6 +322,7 @@ plot.f_sess <- createFactorMap(svd.res$ExPosition.Data$fi)
 plot.f_sess$zeMap + f.labels
 ```
 
+
 We can also compute the partial factor scores for each participant:
 
 ```{r partial_f_sess}
@@ -363,3 +364,107 @@ plot.pf_sess <- createPartialFactorScoresMap(
 # add it to the factor map ** MYC this broke when there is 3 subjects, ask JC 20190410
 # plot.f_sess4pF$zeMap + f.labels + plot.pf_sess$mapColByBlocks
 ```
+
+
+To have a clearer view of the factor scores for the subject x edges, we first compute the mean factor scores for the each network edge.
+
+```{r mean_fj_bootstrap}
+# Compute means of factor scores for different edges----
+mean.fj <- getMeans(svd.res$ExPosition.Data$fj, gtlabel$subjects_edge_label) # with t(gt)
+colnames(mean.fj) <- sapply(c(1:ncol(mean.fj)), function(x){sprintf("Factor %s",x)})
+
+BootCube.Comm <- Boot4Mean(svd.res$ExPosition.Data$fj,
+                           design = gtlabel$subjects_edge_label,
+                           niter = 100,
+                           suppressProgressBar = TRUE)
+
+
+# Compute means of factor scores for different types of edges
+mean.fj.bw <- getMeans(svd.res$ExPosition.Data$fj, gtlabel$subjects_wb) # with t(gt)
+colnames(mean.fj.bw) <- sapply(c(1:ncol(mean.fj.bw)), function(x){sprintf("Factor %s",x)})
+
+BootCube.Comm.bw <- Boot4Mean(svd.res$ExPosition.Data$fj,
+                           design = gtlabel$subjects_wb,
+                           niter = 100,
+                           suppressProgressBar = TRUE)
+
+```
+
+Next, we plot the factor scores for the subject x edges (a mess): Dim 1 & 2
+```{r plot_f_edge, echo=FALSE, fig.show = 'hide'}
+# plot all factor scores
+plot.f_edge <- createFactorMap(mean.fj, axis1 = 1, axis2 = 2,
+                               col.points = net.edge.col$oc,
+                               text.cex = 2,
+                               force = 0.5,
+                               title = "All factor scores - colored by subject_x_edge types")
+f_netedge_plot01 <- plot.f_edge$zeMap_background + plot.f_edge$zeMap_dots + f.labels
+# plot the significantly contributed factor scores
+plot.f_edge_imp <- createFactorMap(mean.fj, axis1 = 1, axis2 = 2,
+                                   col.points = col4ImportantEdg,
+                                   col.labels = col4ImportantEdg,
+                                   text.cex = 2,
+                                   force = 0.5,
+                                   title = "Significantly contributed factor scores - colored by subject_x_edge types")
+f_netedge_plot02 <- plot.f_edge_imp$zeMap_background + plot.f_edge_imp$zeMap_dots + f.labels
+
+# plot only the significant network edges
+plot.f_impedge <- createFactorMap(mean.fj[importantEdg,], axis1 = 1, axis2 = 2,
+                                   col.points = col4ImportantEdg[importantEdg,],
+                                   col.labels = col4ImportantEdg[importantEdg,],
+                                   constraints = plot.f_edge_imp$constraints,
+                                   text.cex = 2,
+                                   force = 0.5,
+                                   title = "Significantly contributed factor scores\n(colored by subject_x_edge types)")
+f_netedge_plot03 <- plot.f_impedge$zeMap + f.labels
+
+# plot mean factor scores of subject x edge type
+plot.f_bw_imp <- createFactorMap(mean.fj.bw, axis1 = 1, axis2 = 2,
+                                   col.points = net.edge.col$gc[rownames(mean.fj.bw),],
+                                   col.labels = net.edge.col$gc[rownames(mean.fj.bw),],
+                                   text.cex = 3,
+                                   force = 0.5,
+                                   title = "Mean factor scores for subject_x_edge types")
+f_netedge_plot04 <- plot.f_bw_imp$zeMap_background + plot.f_bw_imp$zeMap_dots + plot.f_bw_imp$zeMap_text + f.labels
+
+```
+
+```{r grid_f_netedge_plot, echo=F, fig.height=12, fig.width=12}
+gridExtra::grid.arrange(as.grob(f_netedge_plot01), as.grob(f_netedge_plot02),as.grob(f_netedge_plot03),as.grob(f_netedge_plot04),nrow=2,
+                        top = textGrob("Mean factor scores for edges",gp=gpar(fontsize=18,font=3)))
+```
+
+
+Note that a network edge with its region edges significantly contribute to the components both positively and negatively results in a significant mean factor score that is close to the origin. Also, a network edge with only few region edges will lead to a small total SS as compared to the total eigenvalues; this type of network edge might not be significant even when being far away from the origin. (This is shown in the chunk named `checkCtr` which is hidden/commented in the .rmd.)
+
+We can also add boostrap intervals for the factor scores
+```{r CI_plot, echo = FALSE, fig.show='hide', message= FALSE}
+# plot the only significantly contributed factor scores
+# get the bootstrap data for each network edge
+getBoot2plot_edge <- BootCube.Comm$BootCube[importantEdg,c(1,2),]
+# plot the CI ellipses
+f_impedge.CI <- MakeCIEllipses(getBoot2plot_edge,
+                                 names.of.factors = c(sprintf("Factor %s", 1),sprintf("Factor %s", 2)),
+                                 col = col4ImportantEdg[importantEdg,],
+                                 p.level = .95)
+# create plot
+f_CInetedge_plot01 <- plot.f_impedge$zeMap_background + plot.f_impedge$zeMap_dots + f.labels
+f_CInetedge_plot02 <- plot.f_impedge$zeMap_background + plot.f_impedge$zeMap_dots + f_impedge.CI + f.labels
+
+# get the bootstrap data for each type of network edges
+getBoot2plot_edge_bw <- BootCube.Comm.bw$BootCube[,c(1,2),]
+# plot the CI ellipses
+plot.CI.f_bw <- MakeCIEllipses(getBoot2plot_edge_bw,
+                                 names.of.factors = c(sprintf("Factor %s", 1),sprintf("Factor %s", 2)),
+                                 col = net.edge.col$gc[rownames(getBoot2plot_edge_bw),],
+                                 p.level = .95)
+# create plot
+f_CInetedge_plot03 <- plot.f_bw_imp$zeMap + plot.CI.f_bw + f.labels
+```
+
+```{r grid_f_netedgeCI_plot, echo=F, fig.height=12, fig.width=12, message=FALSE}
+gridExtra::grid.arrange(as.grob(f_CInetedge_plot01), as.grob(f_CInetedge_plot02), as.grob(f_CInetedge_plot03),ncol=2,
+                        top = textGrob("Mean factor scores with CIs for significantly contributed edges",gp=gpar(fontsize=18,font=3)))
+```
+
+
