--- a/res_MuSu/2_[NA,n, NA]/MSC_010208/MuSu_(NA, n, NA).Rmd
+++ b/res_MuSu/2_[NA,n, NA]/MSC_010208/MuSu_(NA, n, NA).Rmd
@@ -155,8 +155,16 @@ _Note: The data was transformed from the upper triangle of the correlation matri
 
 ```{r preproc_step, include = FALSE, message=FALSE}
 # Center & Normalize Columns (across rows) 
-
 gt_preproc <- expo.scale(gt, center = TRUE, scale = FALSE)# check dimension
+
+subtab_i <-  gtlabel$subjects_label     # Use subjects as mini table
+n_subtable <- length(unique(subtab_i))  # Number of mini tables
+sv <- matrix(NA, 1, n_subtable)     # Initialize eigenvalues object
+for(i in 1:n_subtable){
+  sv[i] <- (svd(gt_preproc[,subtab_i==unique(subtab_i)[i]])$d[1]) # singular value from svd 
+}
+
+
 dim(gt_preproc)
 ```
 
@@ -231,17 +239,6 @@ col4ImportantEdg[!importantEdg] <- col4NS # replace them in the color vector
 
 ```
 
-```{r checkCtr, echo = FALSE, include = FALSE}
-# f12 <- rowSums(mean.fj[,1:2])
-# ftest <- svd.res$ExPosition.Data$fj[which(rownames(svd.res$ExPosition.Data$fi) == "sub02_21"),]
-# col2test <- col4ImportantEdg_reg[which(rownames(col4ImportantEdg_reg) == "sub02_21")]
-# fmaptest <- createFactorMap(ftest, col.points = col2test)
-# fmaptest$zeMap_background+fmaptest$zeMap_dots
-# sum(absCtrEdg["sub02_21",1:2])/sum(svd.res$ExPosition.Data$eigs[1:2])
-# 1/length(absCtrEdg)
-```
-
-
 Then the contributions are shown in plots
 
 ```{r plot_ci, echo=F, fig.show = 'hide'}
@@ -300,43 +297,43 @@ plot.f_sess$zeMap + f.labels
 We can also compute the partial factor scores for each participant:
 
 ```{r partial_f_sess}
-# subj.table <- gtlabel$subjects_label
-# n_subj <- length(unique(gtlabel$subjects_label))
-# # compute partial factor scores: K x sv[1] x X_k x Q_k
-# pFi <- sapply(1:n_subj, function(x){
-#   n_subj/(sv[x])*cgt[,which(subj.table == unique(subj.table)[x])] %*% (svd.res$ExPosition.Data$pdq$q[which(subj.table == unique(subj.table)[x]),])
-# }, simplify = "array")
-# # name the dimension of the array that stores partial F
-# dimnames(pFi) <- list(rownames(cgt),colnames(svd.res$ExPosition.Data$fi),unique(subj.table))
-# 
-# ## Check barycentric
-# ch1 <- apply(pFi,c(1:2),mean)
-# ch2 <- cgt %*% (svd.res$ExPosition.Data$pdq$q)
+subj.table <- gtlabel$subjects_label
+n_subj <- length(unique(gtlabel$subjects_label))
+# compute partial factor scores: K x sv[1] x X_k x Q_k
+pFi <- sapply(1:n_subj, function(x){
+  n_subj/(sv[x])*cgt[,which(subj.table == unique(subj.table)[x])] %*% (svd.res$ExPosition.Data$pdq$q[which(subj.table == unique(subj.table)[x]),])
+}, simplify = "array")
+# name the dimension of the array that stores partial F
+dimnames(pFi) <- list(rownames(cgt),colnames(svd.res$ExPosition.Data$fi),unique(subj.table))
+
+## Check barycentric
+ch1 <- apply(pFi,c(1:2),mean)
+ch2 <- cgt %*% (svd.res$ExPosition.Data$pdq$q)
 ```
 
 And plot them on the same factor map:
 
 ```{r plot_pf_sess, echo = FALSE}
 # find the constraints for the pF map
-# pF.constraints <- minmaxHelper4Partial(
-#                                     FactorScores = svd.res$ExPosition.Data$fi,
-#                                     partialFactorScores = pFi)
-# # plot again the factor map
-# plot.f_sess4pF <- createFactorMap(svd.res$ExPosition.Data$fi,
-#                                   constraints = pF.constraints) # with t(gt)
-# 
-# # select color for subjects (subtables)
-# plot.pf_sess <- createPartialFactorScoresMap(
-#   factorScores = svd.res$ExPosition.Data$fi,
-#   partialFactorScores = pFi,
-#   axis1 = 1, axis2 = 2,
-#   # color4Items = col4ImportantSes,
-#   names4Partial = subj.name,
-#   font.labels = "bold"
-# )
+pF.constraints <- minmaxHelper4Partial(
+                                    FactorScores = svd.res$ExPosition.Data$fi,
+                                    partialFactorScores = pFi)
+# plot again the factor map
+plot.f_sess4pF <- createFactorMap(svd.res$ExPosition.Data$fi,
+                                  constraints = pF.constraints) # with t(gt)
+
+# select color for subjects (subtables)
+plot.pf_sess <- createPartialFactorScoresMap(
+  factorScores = svd.res$ExPosition.Data$fi,
+  partialFactorScores = pFi,
+  axis1 = 1, axis2 = 2,
+  # color4Items = col4ImportantSes,
+  names4Partial = subj.name,
+  font.labels = "bold"
+)
 
 # add it to the factor map ** MYC this broke when there is 3 subjects, ask JC 20190410
-# plot.f_sess4pF$zeMap + f.labels + plot.pf_sess$mapColByBlocks
+plot.f_sess4pF$zeMap + f.labels + plot.pf_sess$mapColByBlocks
 ```
 
 
@@ -441,4 +438,193 @@ gridExtra::grid.arrange(as.grob(f_CInetedge_plot01), as.grob(f_CInetedge_plot02)
                         top = textGrob("Mean factor scores with CIs for significantly contributed edges",gp=gpar(fontsize=18,font=3)))
 ```
 
+
+We can also show the factor scores for network edges as square matrix of each subject.
+
+```{r squaremat_fi, echo=F, fig.show = 'hide'}
+fj1_sqmat <- list()
+fj2_sqmat <- list()
+for(i in 1:length(subj.name)){
+   fj1_sqmat[[i]] <- vec2sqmat(svd.res$ExPosition.Data$fj[gtlabel$subjects_label==subj.name[i],1]) 
+   fj2_sqmat[[i]] <- vec2sqmat(svd.res$ExPosition.Data$fj[gtlabel$subjects_label==subj.name[i],2])   
+}
+
+heat_fj1 <- list()
+heat_fj2 <- list()
+for(i in 1:length(subj.name)){
+  heat_fj1[i] <- superheat(as.matrix(fj1_sqmat[[i]]), y.axis.reverse = T,
+                    membership.rows = parcel.list[[i]]$vox.des$Comm.rcd,
+                    membership.cols = parcel.list[[i]]$vox.des$Comm.rcd,                    
+                    left.label.col = labelcol[[i]],
+                    bottom.label.col = labelcol[[i]],
+                    left.label.size = 0.08,
+                    bottom.label.size = 0.05,
+                    extreme.values.na = FALSE,
+                    heat.lim = c(-.005, .005),
+                    heat.pal = kovesi.diverging_bwr_40_95_c42(200),
+                    heat.pal.values = c(0,0.35,0.5,0.65,1),
+                    left.label.text.size = 3,
+                    bottom.label.text.size = 2,
+                    left.label.text.col = textcol[[i]], 
+                    bottom.label.text.col = textcol[[i]], 
+                    title=sprintf("%s, dim1",subj.name[i]))
+  
+  heat_fj2[i] <- superheat(fj2_sqmat[[i]], y.axis.reverse = T,
+                    membership.rows = parcel.list[[i]]$vox.des$Comm.rcd,
+                    membership.cols = parcel.list[[i]]$vox.des$Comm.rcd,                    
+                    left.label.col = labelcol[[i]],
+                    bottom.label.col = labelcol[[i]],
+                    left.label.size = 0.08,
+                    bottom.label.size = 0.05,
+                    extreme.values.na = FALSE,
+                    heat.lim = c(-.005, .005),
+                    heat.pal = kovesi.diverging_bwr_40_95_c42(200),
+                    heat.pal.values = c(0,0.35,0.5,0.65,1),
+                    left.label.text.size = 3,
+                    bottom.label.text.size = 2,
+                    left.label.text.col = textcol[[i]], 
+                    bottom.label.text.col = textcol[[i]], 
+                    title=sprintf("%s, dim2",subj.name[i]))
+}
+
+```
+
+Node x Node Matrix of Factor Score: Dim 1 & Dim 2
+```{r grid_heat_fi, echo=F, fig.height=15, fig.width=(7*length(subj.name))}
+print("Dimension 1")
+do.call(grid.arrange, c(heat_fj1, ncol=length(subj.name)))
+
+print("Dimension 2")
+do.call(grid.arrange, c(heat_fj2, ncol=length(subj.name)))
+```
+
+Factor score (Dim 1) in square matrix that have significant contribution only
+```{r, squaremat_sigfj1, echo=F, fig.show = 'hide'}
+fj_sig <- svd.res$ExPosition.Data$fj
+fj_sig[!importantEdg1] <- 0
+fj1_sig_sqmat <- list()
+for(i in 1:length(subj.name)){
+   fj1_sig_sqmat[[i]] <- vec2sqmat(fj_sig[gtlabel$subjects_label==subj.name[i],1])
+}
+
+heat_sigfj1 <- list()
+for(i in 1:length(subj.name)){
+  heat_sigfj1[i] <- superheat(fj1_sig_sqmat[[i]], y.axis.reverse = T,
+                                membership.rows = parcel.list[[i]]$vox.des$Comm.rcd,
+                                membership.cols = parcel.list[[i]]$vox.des$Comm.rcd,                    
+                                left.label.col = labelcol[[i]],
+                                bottom.label.col = labelcol[[i]],
+                                left.label.size = 0.08,
+                                bottom.label.size = 0.05,
+                                extreme.values.na = FALSE,
+                                heat.lim = c(-.005, .005),
+                                heat.pal = kovesi.diverging_bwr_40_95_c42(200),
+                                heat.pal.values = c(0,0.35,0.5,0.65,1),
+                                left.label.text.size = 3,
+                                bottom.label.text.size = 2,
+                                left.label.text.col = textcol[[i]], 
+                                bottom.label.text.col = textcol[[i]], 
+                                title=sprintf("%s: significant contribution",subj.name[i]))
+}
+```
+
+Node x Node Matrix of Factor Score w/ Sig Contribution: Dim 1
+```{r, grid_heat_sigfj1, echo=F, fig.height=8, fig.width=(7*length(subj.name))}
+do.call(grid.arrange, c(heat_sigfj1, ncol=length(subj.name)))
+```
+
+Smoothed Sig Factor Score (Dim 1)
+```{r, sm_squaremat_sigfj1, echo=F, fig.show = 'hide'}
+#--- the important variables are the ones that contribute more than or equal to the average
+sm_heat_sigfj1 <- list()
+for(i in 1:length(subj.name)){
+sm_heat_sigfj1[i] <- superheat(fj1_sig_sqmat[[i]], y.axis.reverse = T,
+                              smooth.heat = T, smooth.heat.type = "mean",
+                              membership.rows = parcel.list[[i]]$vox.des$Comm.rcd,
+                              membership.cols = parcel.list[[i]]$vox.des$Comm.rcd,                    
+                              left.label.col = labelcol[[i]],
+                              bottom.label.col = labelcol[[i]],
+                              left.label.size = 0.08,
+                              bottom.label.size = 0.05,
+                              extreme.values.na = FALSE,
+                              heat.lim = c(-.005, .005),
+                              heat.pal = kovesi.diverging_bwr_40_95_c42(200),
+                              heat.pal.values = c(0,0.35,0.5,0.65,1),
+                              left.label.text.size = 3,
+                              bottom.label.text.size = 2,
+                              left.label.text.col = textcol[[i]], 
+                              bottom.label.text.col = textcol[[i]], 
+                              title=sprintf("%s: significant contribution (mean-smooth)",subj.name[i]))
+}
+
+```
+
+Smoothed Node x Node Matrix of Factor Score w/ Sig Contribution: Dim 1
+```{r, grid_smheat_sigfj1, echo=F, fig.height=8, fig.width=(7*length(subj.name))}
+do.call(grid.arrange, c(sm_heat_sigfj1, ncol=length(subj.name)))
+```
+
+Factor score (Dim 2) in square matrix that have significant contribution only
+```{r, squaremat_sigfj2, echo=F, fig.show = 'hide'}
+fj2_sig_sqmat <- list()
+for(i in 1:length(subj.name)){
+   fj2_sig_sqmat[[i]] <- vec2sqmat(fj_sig[gtlabel$subjects_label==subj.name[i],2])
+}
+
+heat_sigfj2 <- list()
+for(i in 1:length(subj.name)){
+  heat_sigfj2[i] <- superheat(fj2_sig_sqmat[[i]], y.axis.reverse = T,
+                                membership.rows = parcel.list[[i]]$vox.des$Comm.rcd,
+                                membership.cols = parcel.list[[i]]$vox.des$Comm.rcd,                    
+                                left.label.col = labelcol[[i]],
+                                bottom.label.col = labelcol[[i]],
+                                left.label.size = 0.08,
+                                bottom.label.size = 0.05,
+                                extreme.values.na = FALSE,
+                                heat.lim = c(-.005, .005),
+                                heat.pal = kovesi.diverging_bwr_40_95_c42(200),
+                                heat.pal.values = c(0,0.35,0.5,0.65,1),
+                                left.label.text.size = 3,
+                                bottom.label.text.size = 2,
+                                left.label.text.col = textcol[[i]], 
+                                bottom.label.text.col = textcol[[i]], 
+                                title=sprintf("%s: significant contribution",subj.name[i]))
+}
+
+```
+
+Node x Node Matrix of Factor Score w/ Sig Contribution: Dim 2
+```{r, grid_heat_sigfj2, echo=F, fig.height=8, fig.width=(7*length(subj.name))}
+do.call(grid.arrange, c(heat_sigfj2, ncol=length(subj.name)))
+```
+
+Smoothed Sig Factor Score (Dim 2)
+```{r, sm_squaremat_sigfj2, echo=F, fig.show = 'hide'}
+#--- the important variables are the ones that contribute more than or equal to the average
+sm_heat_sigfj2 <- list()
+for(i in 1:length(subj.name)){
+sm_heat_sigfj2[i] <- superheat(fj2_sig_sqmat[[i]], y.axis.reverse = T,
+                              smooth.heat = T, smooth.heat.type = "mean",
+                              membership.rows = parcel.list[[i]]$vox.des$Comm.rcd,
+                              membership.cols = parcel.list[[i]]$vox.des$Comm.rcd,                    
+                              left.label.col = labelcol[[i]],
+                              bottom.label.col = labelcol[[i]],
+                              left.label.size = 0.08,
+                              bottom.label.size = 0.05,
+                              extreme.values.na = FALSE,
+                              heat.lim = c(-.005, .005),
+                              heat.pal = kovesi.diverging_bwr_40_95_c42(200),
+                              heat.pal.values = c(0,0.35,0.5,0.65,1),
+                              left.label.text.size = 3,
+                              bottom.label.text.size = 2,
+                              left.label.text.col = textcol[[i]], 
+                              bottom.label.text.col = textcol[[i]], 
+                              title=sprintf("%s: significant contribution (mean-smooth)",subj.name[i]))
+}
+```
+
+Smoothed Node x Node Matrix of Factor Score w/ Sig Contribution: Dim 2
+```{r, grid_smheat_sigfj2, echo=F, fig.height=8, fig.width=(7*length(subj.name))}
+do.call(grid.arrange, c(sm_heat_sigfj2, ncol=length(subj.name)))
+```
 
