--- a/res_MuSu/6_[NA, n, MFA_NetEdge]/MSC_010208/MuSu_(NA, n, MFA_NetEdge).Rmd
+++ b/res_MuSu/6_[NA, n, MFA_NetEdge]/MSC_010208/MuSu_(NA, n, MFA_NetEdge).Rmd
@@ -1,6 +1,6 @@
 
 ---
-title: "MuSu_(NA, n, MFA_subs) - MSC01, MSC02, MSC08 (bad sub)"
+title: "MuSu_(NA, n, MFA_NetEdge) - MSC01, MSC02, MSC08 (bad sub)"
 output: github_document
 ---
 
@@ -35,7 +35,7 @@ parcelfile2read <- c("/sub-MSC01_node_parcel_comm.txt",
                      "/sub-MSC08_node_parcel_comm.txt")
 subj.name <- c("sub01","sub02", "sub08")
 
-load(paste0("../../../data/grandatble_and_labels_MSC01_MSC02_MSC08_20190410.Rdata")) # read the labels of grandtable
+load(paste0("../../../data/grandatble_and_labels_MSC01_MSC02_MSC08_20190411.Rdata")) # read the labels of grandtable
 # gt: grand tabls
 # labels: information for each edge in the rectangular grand table
 
@@ -45,11 +45,11 @@ gtlabel[,'subjects_wb'] <- sprintf('%s_%s',gtlabel$subjects_label,gtlabel$wb)
 
 ```
 
-> This is an SVD with centered & normalized columns.
+> This is an SVD with centered & normalized columns as well as MFA-normalized subject tables.
 
 ##### Data:
 
-The data are from the morning scan club (MSC) resting-state data where the participants were each scanned 10 times. The data that are analyzed here are the z-transformed coefficients of correlation between regions. These regions can be categorized into 12 networks: 
+The data are from the morning scan club (MSC) resting-state data where the participants were each scanned 10 times. The data that are analyzed here are the z-transformed coefficients of correlation between regions. These regions can be categorized into different networks: 
 
 ```{r community_list, echo = FALSE, fig.height= 10, fig.width = 2}
 # rename communities
@@ -95,9 +95,9 @@ As a result, the correlation matrix of each session of each subject will look li
 ```{r data, echo = FALSE, include = FALSE, fig.show='hide'}
 ### Make these not objects, but part of a list? ### MYC NEED TO CHANGE 20190404
 # read examplar data
-# zmat.path <- "../../../data/zmat"
-# subj.num <- substr(subj.name, start = 4, stop = 6) # only works with format like "sub06" or "MSC06"
-# #--- plot heatmap
+zmat.path <- "../../../data/zmat"
+subj.num <- substr(subj.name, start = 4, stop = 6) # only works with format like "sub06" or "MSC06"
+#--- plot heatmap
 # hmaplist <- list()
 # hmaplist_i <- 1
 # for(subj.count in 1:length(parcel.list)){
@@ -123,7 +123,6 @@ As a result, the correlation matrix of each session of each subject will look li
 #                                 left.label.text.alignment = "left",
 #                                 title = sprintf("Correlation matrix of #%s session",session.count)
 #                                 )
-#     # hmaplist_i <- hmaplist_i + 1
 #   }
 # }
 
@@ -136,12 +135,11 @@ As a result, the correlation matrix of each session of each subject will look li
 # }
 ```
 
-
 This correlation matrix were then turned into a rectangular matrix
 
 ##### Rectangular data:
 
-+ Rows: 5 sessions
++ Rows: 10 sessions
 
 + Columns: Different edges (e.g, _within DMN_, _between DMN & CON_, _between DMN & FPN_, etc.) of different subjects
 
@@ -151,46 +149,54 @@ _Note: The data was transformed from the upper triangle of the correlation matri
 
 + Centering: across sessions (rows) (i.e., the columns are centered)
 
-+ Normalizing: across sessions (rows) (i.e., the columns are normalized); MFA normalized by subjects 
++ Normalizing:  across sessions (rows) (i.e., the columns are normalized to SS = 1); MFA-normalized the table of each edge type
+
+First we compute the weights that are used to MFA-normalized each subject table. These weights are computed as the inverse of the first singular value:
 
 ```{r preproc_step, include = FALSE, message=FALSE}
-# Center Columns (across rows) + MFA normalize mini-block (Subjects)
+# Center Columns (across rows) + MFA normalize mini-block (Edge Type)
 cgt <- expo.scale(gt, center = T, scale = "ss1")
 cgt[is.nan(cgt)] <- 0   # replace NaN with zero 
 
-subtab_i <-  gtlabel$subjects_label     # Use subjects as mini table
-n_subtable <- length(unique(subtab_i))  # Number of mini tables
-sv <- matrix(NA, 1, n_subtable)     # Initialize eigenvalues object
+# == Get singular value of subjects == #
+# for partial factor score?
+subtab_i <-  gtlabel$subjects_label     # Define subjects mini-table
+n_subtable <- length(unique(subtab_i))  # Number of subject mini tables
+
+sv_sub <- matrix(NA, 1, n_subtable)     # Initialize eigenvalues object
+colnames(sv_sub) <- levels(gtlabel$subjects_label)
 for(i in 1:n_subtable){
-  sv[i] <- (svd(cgt[,subtab_i==unique(subtab_i)[i]])$d[1]) # singular value from svd 
+  sv_sub[i] <- (svd(cgt[,subtab_i==unique(subtab_i)[i]])$d[1]) # singular value from svd 
 }
-eigens <- sv^2
+
+# == MFA-preproc with edges_label == #
+edgetab_i <- gtlabel$edges_label        # Define edge-type mini-table
+n_edgetable <- length(unique(edgetab_i))  # Number of edge-type mini tables
+sv_edge <- matrix(NA, 1, n_edgetable) 
+for(i in 1:n_subtable){
+  sv_edge[i] <- (svd(cgt[,edgetab_i==unique(edgetab_i)[i]])$d[1]) # singular value from svd 
+}
 
 mfa_preproc <- cgt
-for(i in 1:n_subtable){
-   mfa_preproc[,subtab_i==unique(subtab_i)[i]] <- mfa_preproc[,subtab_i==unique(subtab_i)[i]]/sv[i]
+for(i in 1:n_edgetable){
+   mfa_preproc[,edgetab_i==unique(edgetab_i)[i]] <- mfa_preproc[,edgetab_i==unique(edgetab_i)[i]]/sv_edge[i]
 }
-
-## Not using mpSTATIS.preprocess so we can have sv and eigan saved out for partial factor score. 
-## This also shows exact steps of normalization
-# mfa_preproc <- mpSTATIS.preprocess(data = cgt, column.design = as.matrix(t(gtlabel$subjects_label)), row.design = NULL, 
-#                                    row.preprocess = 'None', column.preprocess = 'None', # did col normalize with expo.scale 
-#                                    table.preprocess = 'MFA_Normalization', 
-#                                    make.columndesign.nominal = TRUE, make.rowdesign.nominal = TRUE)
 
 # set the column names
 gt_preproc <- mfa_preproc
 gt_preproc[is.nan(gt_preproc)] <- 0   # replace NaN with zero 
+gt_preproc[is.na(gt_preproc)] <- 0   # replace NA with zero * MFA prepro of edge-type minitable produces NA and not NaN - MC 20190411
 colnames(gt_preproc) <- gtlabel$subjects_edge_label
-# check dimension
-dim(gt_preproc)
+dim(gt_preproc) # check dimension
+
+# show the weight for each subject
+1/sv_sub
 ```
 
 Then, the preprocessed data are decomposed by the SVD:
 
 ```{r svd, include = FALSE}
 svd.res <- epPCA(gt_preproc,scale = FALSE, center = FALSE, graphs = FALSE)
-
 ```
 
 ##### Results:
@@ -202,7 +208,6 @@ First, the scree plot illustrates the eigen value with percentage of explained v
 ```{r scree, echo = FALSE}
 PlotScree(ev = svd.res$ExPosition.Data$t,
           title = "Compromise: Explained variance per dimension")
-
 ```
 
 ###### Contributions
@@ -257,19 +262,8 @@ col4ImportantEdg[!importantEdg] <- col4NS # replace them in the color vector
 
 ```
 
-```{r checkCtr, echo = FALSE, include = FALSE}
-# f12 <- rowSums(mean.fj[,1:2])
-# ftest <- svd.res$ExPosition.Data$fj[which(rownames(svd.res$ExPosition.Data$fi) == "sub02_21"),]
-# col2test <- col4ImportantEdg_reg[which(rownames(col4ImportantEdg_reg) == "sub02_21")]
-# fmaptest <- createFactorMap(ftest, col.points = col2test)
-# fmaptest$zeMap_background+fmaptest$zeMap_dots
-# sum(absCtrEdg["sub02_21",1:2])/sum(svd.res$ExPosition.Data$eigs[1:2])
-# 1/length(absCtrEdg)
-```
-
 
 Then the contributions are shown in plots
-
 ```{r plot_ci, echo=F, fig.show = 'hide'}
 ciplot <- createFactorMap(cI,
                               axis1 = 1, axis2 = 2,
@@ -322,26 +316,25 @@ plot.f_sess <- createFactorMap(svd.res$ExPosition.Data$fi)
 plot.f_sess$zeMap + f.labels
 ```
 
-
-We can also compute the partial factor scores for each participant:
+We can also plot the partial factor scores that show how each subject contributes to different sessions:
 
 ```{r partial_f_sess}
+# We can also compute the partial factor scores for each participant:
 subj.table <- gtlabel$subjects_label
 n_subj <- length(unique(gtlabel$subjects_label))
 # compute partial factor scores: K x sv[1] x X_k x Q_k
 pFi <- sapply(1:n_subj, function(x){
-  n_subj/(sv[x])*cgt[,which(subj.table == unique(subj.table)[x])] %*% (svd.res$ExPosition.Data$pdq$q[which(subj.table == unique(subj.table)[x]),])
+  n_subj/(sv_sub[x])*cgt[,which(subj.table == unique(subj.table)[x])] %*% (svd.res$ExPosition.Data$pdq$q[which(subj.table == unique(subj.table)[x]),])
 }, simplify = "array")
 # name the dimension of the array that stores partial F
 dimnames(pFi) <- list(rownames(cgt),colnames(svd.res$ExPosition.Data$fi),unique(subj.table))
 
 ## Check barycentric
-# ch1 <- apply(pFi,c(1:2),mean)
-# ch2 <- cgt %*% (svd.res$ExPosition.Data$pdq$q)
+ch1 <- apply(pFi,c(1:2),mean)
+ch2 <- cgt %*% (svd.res$ExPosition.Data$pdq$q)
 ```
 
 And plot them on the same factor map:
-
 ```{r plot_pf_sess, echo = FALSE}
 # find the constraints for the pF map
 pF.constraints <- minmaxHelper4Partial(
@@ -356,15 +349,13 @@ plot.pf_sess <- createPartialFactorScoresMap(
   factorScores = svd.res$ExPosition.Data$fi,
   partialFactorScores = pFi,
   axis1 = 1, axis2 = 2,
-  # color4Items = col4ImportantSes,
   names4Partial = subj.name,
   font.labels = "bold"
 )
 
 # add it to the factor map ** MYC this broke when there is 3 subjects, ask JC 20190410
-# plot.f_sess4pF$zeMap + f.labels + plot.pf_sess$mapColByBlocks
+plot.f_sess4pF$zeMap + f.labels + plot.pf_sess$mapColByBlocks
 ```
-
 
 To have a clearer view of the factor scores for the subject x edges, we first compute the mean factor scores for the each network edge.
 
@@ -434,7 +425,6 @@ gridExtra::grid.arrange(as.grob(f_netedge_plot01), as.grob(f_netedge_plot02),as.
                         top = textGrob("Mean factor scores for edges",gp=gpar(fontsize=18,font=3)))
 ```
 
-
 Note that a network edge with its region edges significantly contribute to the components both positively and negatively results in a significant mean factor score that is close to the origin. Also, a network edge with only few region edges will lead to a small total SS as compared to the total eigenvalues; this type of network edge might not be significant even when being far away from the origin. (This is shown in the chunk named `checkCtr` which is hidden/commented in the .rmd.)
 
 We can also add boostrap intervals for the factor scores
@@ -467,4 +457,191 @@ gridExtra::grid.arrange(as.grob(f_CInetedge_plot01), as.grob(f_CInetedge_plot02)
                         top = textGrob("Mean factor scores with CIs for significantly contributed edges",gp=gpar(fontsize=18,font=3)))
 ```
 
+We can also show the factor scores for network edges as square matrix of each subject.
 
+```{r squaremat_fi, echo=F, fig.show = 'hide'}
+fj1_sqmat <- list()
+fj2_sqmat <- list()
+for(i in 1:length(subj.name)){
+   fj1_sqmat[[i]] <- vec2sqmat(svd.res$ExPosition.Data$fj[gtlabel$subjects_label==subj.name[i],1]) 
+   fj2_sqmat[[i]] <- vec2sqmat(svd.res$ExPosition.Data$fj[gtlabel$subjects_label==subj.name[i],2])   
+}
+
+heat_fj1 <- list()
+heat_fj2 <- list()
+for(i in 1:length(subj.name)){
+  heat_fj1[i] <- superheat(as.matrix(fj1_sqmat[[i]]), y.axis.reverse = T,
+                    membership.rows = parcel.list[[i]]$vox.des$Comm.rcd,
+                    membership.cols = parcel.list[[i]]$vox.des$Comm.rcd,                    
+                    left.label.col = labelcol[[i]],
+                    bottom.label.col = labelcol[[i]],
+                    left.label.size = 0.08,
+                    bottom.label.size = 0.05,
+                    extreme.values.na = FALSE,
+                    heat.lim = c(-.005, .005),
+                    heat.pal = kovesi.diverging_bwr_40_95_c42(200),
+                    heat.pal.values = c(0,0.35,0.5,0.65,1),
+                    left.label.text.size = 3,
+                    bottom.label.text.size = 2,
+                    left.label.text.col = textcol[[i]], 
+                    bottom.label.text.col = textcol[[i]], 
+                    title=sprintf("%s, dim1",subj.name[i]))
+  
+  heat_fj2[i] <- superheat(fj2_sqmat[[i]], y.axis.reverse = T,
+                    membership.rows = parcel.list[[i]]$vox.des$Comm.rcd,
+                    membership.cols = parcel.list[[i]]$vox.des$Comm.rcd,                    
+                    left.label.col = labelcol[[i]],
+                    bottom.label.col = labelcol[[i]],
+                    left.label.size = 0.08,
+                    bottom.label.size = 0.05,
+                    extreme.values.na = FALSE,
+                    heat.lim = c(-.005, .005),
+                    heat.pal = kovesi.diverging_bwr_40_95_c42(200),
+                    heat.pal.values = c(0,0.35,0.5,0.65,1),
+                    left.label.text.size = 3,
+                    bottom.label.text.size = 2,
+                    left.label.text.col = textcol[[i]], 
+                    bottom.label.text.col = textcol[[i]], 
+                    title=sprintf("%s, dim2",subj.name[i]))
+}
+
+```
+
+Node x Node Matrix of Factor Score: Dim 1 & Dim 2
+```{r grid_heat_fi, echo=F, fig.height=8, fig.width=(7*length(subj.name))}
+print("Dimension 1")
+do.call(grid.arrange, c(heat_fj1, ncol=length(subj.name)))
+
+print("Dimension 2")
+do.call(grid.arrange, c(heat_fj2, ncol=length(subj.name)))
+```
+
+Factor score (Dim 1) in square matrix that have significant contribution only
+```{r, squaremat_sigfj1, echo=F, fig.show = 'hide'}
+fj_sig <- svd.res$ExPosition.Data$fj
+fj_sig[!importantEdg1] <- 0
+fj1_sig_sqmat <- list()
+for(i in 1:length(subj.name)){
+   fj1_sig_sqmat[[i]] <- vec2sqmat(fj_sig[gtlabel$subjects_label==subj.name[i],1])
+}
+
+heat_sigfj1 <- list()
+for(i in 1:length(subj.name)){
+  heat_sigfj1[i] <- superheat(fj1_sig_sqmat[[i]], y.axis.reverse = T,
+                                membership.rows = parcel.list[[i]]$vox.des$Comm.rcd,
+                                membership.cols = parcel.list[[i]]$vox.des$Comm.rcd,                    
+                                left.label.col = labelcol[[i]],
+                                bottom.label.col = labelcol[[i]],
+                                left.label.size = 0.08,
+                                bottom.label.size = 0.05,
+                                extreme.values.na = FALSE,
+                                heat.lim = c(-.005, .005),
+                                heat.pal = kovesi.diverging_bwr_40_95_c42(200),
+                                heat.pal.values = c(0,0.35,0.5,0.65,1),
+                                left.label.text.size = 3,
+                                bottom.label.text.size = 2,
+                                left.label.text.col = textcol[[i]], 
+                                bottom.label.text.col = textcol[[i]], 
+                                title=sprintf("%s: significant contribution",subj.name[i]))
+}
+```
+
+Node x Node Matrix of Factor Score w/ Sig Contribution: Dim 1
+```{r, grid_heat_sigfj1, echo=F, fig.height=8, fig.width=(7*length(subj.name))}
+do.call(grid.arrange, c(heat_sigfj1, ncol=length(subj.name)))
+```
+
+Smoothed Sig Factor Score (Dim 1)
+```{r, sm_squaremat_sigfj1, echo=F, fig.show = 'hide'}
+#--- the important variables are the ones that contribute more than or equal to the average
+sm_heat_sigfj1 <- list()
+for(i in 1:length(subj.name)){
+sm_heat_sigfj1[i] <- superheat(fj1_sig_sqmat[[i]], y.axis.reverse = T,
+                              smooth.heat = T, smooth.heat.type = "mean",
+                              membership.rows = parcel.list[[i]]$vox.des$Comm.rcd,
+                              membership.cols = parcel.list[[i]]$vox.des$Comm.rcd,                    
+                              left.label.col = labelcol[[i]],
+                              bottom.label.col = labelcol[[i]],
+                              left.label.size = 0.08,
+                              bottom.label.size = 0.05,
+                              extreme.values.na = FALSE,
+                              heat.lim = c(-.005, .005),
+                              heat.pal = kovesi.diverging_bwr_40_95_c42(200),
+                              heat.pal.values = c(0,0.35,0.5,0.65,1),
+                              left.label.text.size = 3,
+                              bottom.label.text.size = 2,
+                              left.label.text.col = textcol[[i]], 
+                              bottom.label.text.col = textcol[[i]], 
+                              title=sprintf("%s: significant contribution (mean-smooth)",subj.name[i]))
+}
+
+```
+
+Smoothed Node x Node Matrix of Factor Score w/ Sig Contribution: Dim 1
+```{r, grid_smheat_sigfj1, echo=F, fig.height=8, fig.width=(7*length(subj.name))}
+do.call(grid.arrange, c(sm_heat_sigfj1, ncol=length(subj.name)))
+```
+
+Factor score (Dim 2) in square matrix that have significant contribution only
+```{r, squaremat_sigfj2, echo=F, fig.show = 'hide'}
+fj2_sig_sqmat <- list()
+for(i in 1:length(subj.name)){
+   fj2_sig_sqmat[[i]] <- vec2sqmat(fj_sig[gtlabel$subjects_label==subj.name[i],2])
+}
+
+heat_sigfj2 <- list()
+for(i in 1:length(subj.name)){
+  heat_sigfj2[i] <- superheat(fj2_sig_sqmat[[i]], y.axis.reverse = T,
+                                membership.rows = parcel.list[[i]]$vox.des$Comm.rcd,
+                                membership.cols = parcel.list[[i]]$vox.des$Comm.rcd,                    
+                                left.label.col = labelcol[[i]],
+                                bottom.label.col = labelcol[[i]],
+                                left.label.size = 0.08,
+                                bottom.label.size = 0.05,
+                                extreme.values.na = FALSE,
+                                heat.lim = c(-.005, .005),
+                                heat.pal = kovesi.diverging_bwr_40_95_c42(200),
+                                heat.pal.values = c(0,0.35,0.5,0.65,1),
+                                left.label.text.size = 3,
+                                bottom.label.text.size = 2,
+                                left.label.text.col = textcol[[i]], 
+                                bottom.label.text.col = textcol[[i]], 
+                                title=sprintf("%s: significant contribution",subj.name[i]))
+}
+
+```
+
+Node x Node Matrix of Factor Score w/ Sig Contribution: Dim 2
+```{r, grid_heat_sigfj2, echo=F, fig.height=8, fig.width=(7*length(subj.name))}
+do.call(grid.arrange, c(heat_sigfj2, ncol=length(subj.name)))
+```
+
+Smoothed Sig Factor Score (Dim 2)
+```{r, sm_squaremat_sigfj2, echo=F, fig.show = 'hide'}
+#--- the important variables are the ones that contribute more than or equal to the average
+sm_heat_sigfj2 <- list()
+for(i in 1:length(subj.name)){
+sm_heat_sigfj2[i] <- superheat(fj2_sig_sqmat[[i]], y.axis.reverse = T,
+                              smooth.heat = T, smooth.heat.type = "mean",
+                              membership.rows = parcel.list[[i]]$vox.des$Comm.rcd,
+                              membership.cols = parcel.list[[i]]$vox.des$Comm.rcd,                    
+                              left.label.col = labelcol[[i]],
+                              bottom.label.col = labelcol[[i]],
+                              left.label.size = 0.08,
+                              bottom.label.size = 0.05,
+                              extreme.values.na = FALSE,
+                              heat.lim = c(-.005, .005),
+                              heat.pal = kovesi.diverging_bwr_40_95_c42(200),
+                              heat.pal.values = c(0,0.35,0.5,0.65,1),
+                              left.label.text.size = 3,
+                              bottom.label.text.size = 2,
+                              left.label.text.col = textcol[[i]], 
+                              bottom.label.text.col = textcol[[i]], 
+                              title=sprintf("%s: significant contribution (mean-smooth)",subj.name[i]))
+}
+```
+
+Smoothed Node x Node Matrix of Factor Score w/ Sig Contribution: Dim 2
+```{r, grid_smheat_sigfj2, echo=F, fig.height=8, fig.width=(7*length(subj.name))}
+do.call(grid.arrange, c(sm_heat_sigfj2, ncol=length(subj.name)))
+```
