Remove extra loading of DiStatis and edit fig.height

--- a/res_MuSu/6_[NA, n, MFA_NetEdge]/MSC_010208/MuSu_(NA, n, MFA_NetEdge).Rmd
+++ b/res_MuSu/6_[NA, n, MFA_NetEdge]/MSC_010208/MuSu_(NA, n, MFA_NetEdge).Rmd
@@ -11,12 +11,11 @@ suppressMessages(library(psych))
 suppressMessages(library(DistatisR))
 suppressMessages(library(tidyr))
 suppressMessages(library(magrittr))
-suppressMessages(library(DistatisR))
-suppressMessages(library(PTCA4CATA))
+suppressMessages(library(PTCA4CATA)) # devtools::install_github("HerveAbdi/PTCA4CATA")
 suppressMessages(library(ExPosition))
 suppressMessages(library(InPosition))
 suppressMessages(library(MExPosition))
-suppressMessages(library(superheat))
+suppressMessages(library(superheat)) # devtools::install_github("mychan24/superheat")
 suppressMessages(library(gridExtra))
 suppressMessages(library(ggplotify))
 suppressMessages(library(grid))
